modification d'article.css pour que les multipleSection soient correctement alignées

--- a/www/public/styles/article.css
+++ b/www/public/styles/article.css
@@ -326,3 +326,7 @@ div .listDate{
 .listActions img:hover{
     transform: translateY(-10px);
 }
+
+.marginBottomtMultipleSection{
+    margin-bottom: 4%; !important;
+}
